# py_simple_launcher

./: .gitignore  README.md  build_config.json  generate_readme.py  py_simple_launcher.py  pyproject.toml  setup.py
py_simple_launcher/: __init__.py  __main__.py  launcher_app.py
